# filemind

./: .gitignore  Cargo.toml  Dockerfile  README.md  classifier.py  config.py  extractor.py  invoice_text.txt  main.py  organizer.py  requirements.txt
.github/workflows/: ci.yml
assets/: keywords.toml
benches/: classify.rs
src/: audit.rs  classifier.rs  completions.rs  config.rs  engine.rs  error.rs  extractor.rs  lib.rs  main.rs  manifest.rs  organizer.rs  session.rs  ui.rs  watcher.rs
templates/: index.html
