[package]
name = "filemind"
version = "3.0.0"
edition = "2021"
rust-version = "1.88"
description = "Production-grade, deterministic, content-aware file organizer CLI — zero AI, zero network, single binary"
license = "MIT"
repository = "https://github.com/theoxfaber/filemind"
keywords = ["cli", "files", "organizer", "classifier", "productivity"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[lib]
name = "filemind"
path = "src/lib.rs"

[[bin]]
name = "filemind"
path = "src/main.rs"

[dependencies]
# CLI
clap        = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime (engine / watcher)
tokio = { version = "1", features = ["full"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# SQLite manifest + sessions (bundled = no system libsqlite needed)
rusqlite = { version = "0.31", features = ["bundled"] }

# Pure-Rust PDF text extraction (no Tesseract, no C deps)
pdf-extract = "0.7"

# File-system watching
notify = "6"

# Terminal UI
indicatif = "0.17"
console   = "0.15"
colored   = "2"

# File walking + .filemindignore support (same crate ripgrep uses)
walkdir = "2"
ignore  = "0.4"

# Checksums
md5  = "0.7"
sha2 = "0.10"

# MIME detection (magic bytes — the single source for format identification)
infer = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow    = "1"
thiserror = "1"

# CPU-bound parallel classification
rayon = "1"

# Zip export
zip = "2"

# Home/config dir resolution
dirs = "5"

# Regex for filename pattern matching
regex = "1"

# Lazy static globals (built-in keyword lists)
once_cell = "1"

# CSV output format
csv = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "classify"
harness = false

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
